--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "jquery": "^3.4.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-loader": "^3.0.2"
   }
 }
